--- a/app/src/main/res/layout/fragment_offer.xml
+++ b/app/src/main/res/layout/fragment_offer.xml
@@ -4,7 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     tools:context="com.merttoptas.bringit.Activity.Fragment.OfferFragment">
-    
+
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"></include>
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,6 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -29,7 +36,7 @@
                 android:layout_height="35dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="54dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
                 android:background="@color/quantum_vanillablue50"
@@ -71,6 +78,7 @@
                 android:textColorHint="@color/quantum_black_100"
                 android:textSize="12sp"
                 android:textStyle="bold"
+                android:typeface="normal"
                 app:layout_constraintBottom_toTopOf="@+id/etKatSayisi"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +129,7 @@
                 android:autofillHints=""
                 android:background="@color/quantum_vanillablue50"
                 android:ems="10"
-                android:fontFamily="sans-serif-thin"
+                android:fontFamily="sans-serif-light"
                 android:gravity="bottom"
                 android:hint="@string/tarih"
                 android:inputType="date"
@@ -312,14 +320,14 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/reg_button_style"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/ilan_ver"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etAciklama"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/etAciklama" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
