--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#00b0ff</color>
     <color name="colorPrimaryDark">#2979FF</color>
-    <color name="colorAccent">#00b0ff</color>
+    <color name="colorAccent">#6918BB</color>
     <color name="white">#FFFFFF</color>
 </resources>
