splash animation added. icon added.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,10 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/menu_bottom_navigation"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/quantum_white_100"
         app:morphCornerRadius="128dp"
+        app:itemIconTint="@drawable/item_selected"
+        app:itemTextColor="@drawable/item_selected"
         app:morphItemRadius="64dp"
         app:morphVerticalOffset="8dp"
         style="@style/BottomNavigationView"
