--- a/app/src/main/res/layout/fragment_offer.xml
+++ b/app/src/main/res/layout/fragment_offer.xml
@@ -33,13 +33,13 @@
             <EditText
                 android:id="@+id/etBaslik"
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="@dimen/spinner_layout_height"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="54dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_vanillablue50"
+                android:background="@color/quantum_bluegrey50"
                 android:ems="10"
                 android:fontFamily="sans-serif-light"
                 android:gravity="bottom"
@@ -65,7 +65,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_vanillablue50"
+                android:background="@color/quantum_bluegrey50"
                 android:clickable="true"
                 android:ems="10"
                 android:focusable="true"
@@ -95,7 +95,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_vanillablue50"
+                android:background="@color/quantum_bluegrey50"
                 android:clickable="true"
                 android:ems="10"
                 android:entries="@array/katSayisi"
@@ -127,7 +127,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
                 android:autofillHints=""
-                android:background="@color/quantum_vanillablue50"
+                android:background="@color/quantum_bluegrey50"
                 android:ems="10"
                 android:fontFamily="sans-serif-light"
                 android:gravity="bottom"
@@ -156,7 +156,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_vanillablue50"
+                android:background="@color/quantum_bluegrey50"
                 android:dropDownWidth="wrap_content"
                 android:dropDownHeight="wrap_content"
                 android:ems="10"
@@ -183,7 +183,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_vanillablue50"
+                android:background="@color/quantum_bluegrey50"
                 android:ems="10"
                 android:fontFamily="sans-serif-light"
                 android:gravity="bottom"
@@ -209,7 +209,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_vanillablue50"
+                android:background="@color/quantum_bluegrey50"
                 android:ems="10"
                 android:fontFamily="sans-serif-light"
                 android:gravity="bottom"
@@ -235,7 +235,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_vanillablue50"
+                android:background="@color/quantum_bluegrey50"
                 android:completionThreshold="2"
                 android:ems="10"
                 android:fontFamily="sans-serif-light"
@@ -262,7 +262,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_vanillablue50"
+                android:background="@color/quantum_bluegrey50"
                 android:clickable="true"
                 android:ems="10"
                 android:focusable="true"
@@ -288,7 +288,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="@color/quantum_vanillablue50"
+                android:background="@color/quantum_bluegrey50"
                 android:ems="10"
                 android:fontFamily="sans-serif-light"
                 android:gravity="bottom"
