Added multi-language support. Fixed design. font corrected font.

--- a/app/src/main/res/layout-land/fragment_account.xml
+++ b/app/src/main/res/layout-land/fragment_account.xml
@@ -179,7 +179,7 @@
                     android:id="@+id/ivPhone"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:src="@drawable/ic_phone_iphone_black_24dp" />
+                    android:src="@drawable/ic_phone_black" />
 
                 <TextView
                     android:id="@+id/tvPhone"
