--- a/app/src/main/res/drawable/background_gradient.xml
+++ b/app/src/main/res/drawable/background_gradient.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <gradient
-        android:startColor="#2979FF"
+        android:startColor="#03a9f4"
         android:endColor="#00b0ff"
 
 
