--- a/app/src/main/res/drawable/bg_account_gradient.xml
+++ b/app/src/main/res/drawable/bg_account_gradient.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <gradient
-        android:startColor="#00b0ff"
-        android:endColor="#2979FF"
+        android:startColor="#2979FF"
+        android:endColor="#03a9f4"
         android:angle="90"/>
 
 </shape>
