--- a/app/src/main/res/drawable/reg_button_style.xml
+++ b/app/src/main/res/drawable/reg_button_style.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-    <solid android:color="#00b0ff" />
+    <solid android:color="#64b5f6" />
     <corners android:radius="50dp" />
-
 
 </shape>
