--- a/app/src/main/res/layout/fragment_offer.xml
+++ b/app/src/main/res/layout/fragment_offer.xml
@@ -41,7 +41,7 @@
                 android:layout_marginBottom="5dp"
                 android:background="@color/quantum_bluegrey50"
                 android:ems="10"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/esyanin_basligi"
                 android:inputType="text"
@@ -49,7 +49,6 @@
                 android:textColor="@color/quantum_black_100"
                 android:textColorHint="@color/quantum_black_100"
                 android:textSize="12sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/etEsyaSekli"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +68,7 @@
                 android:clickable="true"
                 android:ems="10"
                 android:focusable="true"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/esyanin_tasinma_sekli"
                 android:inputType="text"
@@ -77,7 +76,6 @@
                 android:textColor="@color/quantum_black_100"
                 android:textColorHint="@color/quantum_black_100"
                 android:textSize="12sp"
-                android:textStyle="bold"
                 android:typeface="normal"
                 app:layout_constraintBottom_toTopOf="@+id/etKatSayisi"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -100,7 +98,7 @@
                 android:ems="10"
                 android:entries="@array/katSayisi"
                 android:focusable="true"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/kat_say_s"
                 android:inputType="number"
@@ -109,43 +107,11 @@
                 android:textColor="@color/quantum_black_100"
                 android:textColorHint="@color/quantum_black_100"
                 android:textSize="12sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/etdateTime"
+                app:layout_constraintBottom_toTopOf="@+id/etIl"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/etEsyaSekli"
                 tools:ignore="RtlCompat" />
-
-
-            <EditText
-                android:id="@+id/etdateTime"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/spinner_layout_height"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="5dp"
-                android:autofillHints=""
-                android:background="@color/quantum_bluegrey50"
-                android:ems="10"
-                android:fontFamily="sans-serif-light"
-                android:gravity="bottom"
-                android:hint="@string/tarih"
-                android:inputType="date"
-                android:padding="10dp"
-                android:textAlignment="textStart"
-                android:textColor="@color/quantum_black_100"
-                android:textColorHint="@color/quantum_black_100"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                android:typeface="sans"
-                app:layout_constraintBottom_toTopOf="@+id/etIl"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etKatSayisi"
-                tools:ignore="RtlCompat" />
-
 
             <AutoCompleteTextView
                 android:id="@+id/etIl"
@@ -160,7 +126,7 @@
                 android:dropDownWidth="wrap_content"
                 android:dropDownHeight="wrap_content"
                 android:ems="10"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/e_yan_n_bulundu_u_l"
                 android:inputType="text"
@@ -168,11 +134,10 @@
                 android:textColor="@color/quantum_black_100"
                 android:textColorHint="@color/quantum_black_100"
                 android:textSize="12sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/etIlce"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etdateTime" />
+                app:layout_constraintTop_toBottomOf="@+id/etKatSayisi" />
 
             <AutoCompleteTextView
                 android:id="@+id/etIlce"
@@ -185,7 +150,7 @@
                 android:layout_marginBottom="5dp"
                 android:background="@color/quantum_bluegrey50"
                 android:ems="10"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/llce"
                 android:inputType="text"
@@ -193,7 +158,6 @@
                 android:textColor="@color/quantum_black_100"
                 android:textColorHint="@color/quantum_black_100"
                 android:textSize="12sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/etToİl"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -204,14 +168,14 @@
                 style="@style/spinner_style"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/spinner_layout_height"
-                android:layout_alignParentTop="true"
+                android:layout_alignParentTop="false"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
                 android:background="@color/quantum_bluegrey50"
                 android:ems="10"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/esyanin_gidecegi_il"
                 android:inputType="text"
@@ -219,7 +183,6 @@
                 android:textColor="@color/quantum_black_100"
                 android:textColorHint="@color/quantum_black_100"
                 android:textSize="12sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/etToIlce"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -238,7 +201,7 @@
                 android:background="@color/quantum_bluegrey50"
                 android:completionThreshold="2"
                 android:ems="10"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/esyanin_gidecegi_ilce"
                 android:inputType="text"
@@ -246,7 +209,6 @@
                 android:textColor="@color/quantum_black_100"
                 android:textColorHint="@color/quantum_black_100"
                 android:textSize="12sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/etKat"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -266,7 +228,7 @@
                 android:clickable="true"
                 android:ems="10"
                 android:focusable="true"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/esyanin_cikacagi_kat_sayisi"
                 android:inputType="number"
@@ -274,7 +236,6 @@
                 android:textColor="@color/quantum_black_100"
                 android:textColorHint="@color/quantum_black_100"
                 android:textSize="12sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/etAciklama"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -290,7 +251,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@color/quantum_bluegrey50"
                 android:ems="10"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/aciklama"
                 android:inputType="textMultiLine"
@@ -299,7 +260,6 @@
                 android:textColor="@color/quantum_black_100"
                 android:textColorHint="@color/quantum_black_100"
                 android:textSize="12sp"
-                android:textStyle="bold"
                 android:typeface="sans"
                 app:layout_constraintBottom_toTopOf="@+id/btnSave"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -320,7 +280,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/reg_button_style"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="@font/abeezee"
                 android:text="@string/ilan_ver"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
