--- a/app/src/main/res/layout/offer_layout.xml
+++ b/app/src/main/res/layout/offer_layout.xml
@@ -12,18 +12,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:baselineAligned="false"
         android:orientation="horizontal"
-        android:weightSum="2"
-        android:padding="10dp"
-        android:baselineAligned="false">
+        android:padding="5dp"
+        android:weightSum="2">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:padding="3dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="3dp">
 
             <TextView
                 android:id="@+id/tvBaslik"
@@ -32,11 +32,10 @@
                 android:layout_gravity="left"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="@font/abeezee"
                 android:text="@string/baslik"
                 android:textColor="@color/colorPrimary"
-                android:textSize="12sp"
-                android:textStyle="bold" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/tvOfferBaslik"
@@ -45,12 +44,11 @@
                 android:layout_gravity="left"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="15dp"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="@font/abeezee"
                 android:shadowColor="@color/white"
                 android:text="@string/textview"
                 android:textColor="@color/quantum_black_100"
                 android:textSize="10sp"
-                android:textStyle="bold"
                 tools:ignore="SmallSp" />
 
             <TextView
@@ -61,11 +59,10 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="10dp"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="@font/abeezee"
                 android:text="@string/textview"
                 android:textColor="@color/quantum_black_100"
-                android:textSize="10sp"
-                android:textStyle="bold" />
+                android:textSize="10sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -73,17 +70,16 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:padding="3dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="3dp">
 
             <TextView
                 android:id="@+id/tvIl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="@font/abeezee"
                 android:text="@string/baslik"
                 android:textColor="@color/colorPrimary"
                 android:textSize="12sp">
@@ -97,11 +93,10 @@
                 android:layout_gravity="right"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="10dp"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="@font/abeezee"
                 android:text="@string/textview"
                 android:textColor="@color/quantum_black_100"
-                android:textSize="10sp"
-                android:textStyle="bold" />
+                android:textSize="10sp" />
 
 
             <TextView
@@ -111,11 +106,10 @@
                 android:layout_gravity="right"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="10dp"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="@font/abeezee"
                 android:text="@string/textview"
                 android:textColor="@color/quantum_black_100"
                 android:textSize="10sp"
-                android:textStyle="bold"
                 tools:ignore="RelativeOverlap,SmallSp" />
 
 
