--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
             android:layout_marginTop="8dp"
             app:bt_active="true"
             app:bt_colorActive="@color/blue_active"
-            app:bt_colorInactive="@color/blue_inactive"
+            app:bt_colorInactive="@color/grey_active"
             app:bt_duration="300"
             app:bt_icon="@drawable/ic_home_black_24dp"
             app:bt_shape="@drawable/transition_background_drawable_maps"
@@ -60,7 +60,7 @@
             android:layout_marginTop="8dp"
             app:bt_active="true"
             app:bt_colorActive="@color/blue_active"
-            app:bt_colorInactive="@color/blue_inactive"
+            app:bt_colorInactive="@color/grey_active"
             app:bt_duration="300"
             app:bt_icon="@drawable/ic_add_circle_black"
             app:bt_shape="@drawable/transition_background_drawable_maps"
@@ -77,7 +77,7 @@
             android:layout_marginTop="8dp"
             app:bt_active="true"
             app:bt_colorActive="@color/blue_active"
-            app:bt_colorInactive="@color/blue_inactive"
+            app:bt_colorInactive="@color/grey_active"
             app:bt_duration="300"
             app:bt_icon="@drawable/ic_message_black_24dp"
             app:bt_shape="@drawable/transition_background_drawable_maps"
@@ -96,7 +96,7 @@
             android:layout_marginTop="8dp"
             app:bt_active="true"
             app:bt_colorActive="@color/blue_active"
-            app:bt_colorInactive="@color/blue_inactive"
+            app:bt_colorInactive="@color/grey_active"
             app:bt_duration="300"
             app:bt_icon="@drawable/ic_account_circle_black"
             app:bt_shape="@drawable/transition_background_drawable_maps"
