--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -66,7 +66,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/abeezee"
-                                android:text="@string/lanlar"
+                                android:text="@string/ilanlar"
                                 android:textSize="18sp" />
 
                             <TextView
