--- a/app/src/main/res/layout/offer_layout.xml
+++ b/app/src/main/res/layout/offer_layout.xml
@@ -34,7 +34,7 @@
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/abeezee"
                 android:text="@string/baslik"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/quantum_black_100"
                 android:textSize="12sp" />
 
             <TextView
@@ -81,7 +81,7 @@
                 android:layout_marginEnd="10dp"
                 android:fontFamily="@font/abeezee"
                 android:text="@string/baslik"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/quantum_black_100"
                 android:textSize="12sp">
 
             </TextView>
